# Fermi-orderbook

./: Anchor.toml  README.md  bufferseed.txt  constants_Tue,_08_Aug_2023_10:36:11_GMT.ts  constants_Tue,_08_Aug_2023_10:38:00_GMT.ts  owner_keypair.json  package-lock.json  package.json  rec3.json  recover1.json  recover2.json  tsconfig.json
addl_tes/: fermi-dex.ts  finalize_order.ts
addl_tests/: fermi-dex.ts
deprecated/: lib2.rs
docs/: data.md
extra_tests/: lib.rs  simple-serum2.ts
extra_tests/utils/: constants.ts
extracode/: fermi_dex-keypair.json  lib.rs  notes.txt
local-testing/: id.json  test.ts
local-testing/deploy/: fermi_dex-keypair.json
programs/fermi-dex/: Cargo.toml
programs/fermi-dex/deprecated/: lib.rs
programs/fermi-dex/src/: errors.rs  lib.rs  state.rs  utils2.rs
programs/simple-serum/: Cargo.toml
programs/simple-serum/src/: lib.rs
tests/: fermi-dex.ts  simple-serum.ts  test.ts
tests/sdk/: 0_devnet_airdrop.ts  0b_devnet_airdrop copy.ts  1_new_bid.ts  2_new_ask.ts  2_new_bid.tas  2_new_bid.ts  2_new_bid_cancel.ts  2a_new_bid.ts  2b_new_bid_cancel.ts  3_initialize_new_market.ts  3_new_ask.tas  3_new_ask.ts  3_new_ask_cancel.ts  3_new_bid.ts  3a_new_ask.ts  3b_new_ask_cancel.ts  4_finalize_orders.ts  4_init_market_w_common_token.ts  5_deposit_withdraw.ts  devnet_airdrop.ts  new_bid.ts
tests/sdk/utils/: 3_initialize_new_market.ts  4_init_market_w_common_token.ts  const33.ts  const34.ts  const35.ts  const36.ts  const38.ts  constants.ts  (+316 more)
tests/src/: README.md  config.ts  constants.ts  index.ts  logs.txt
tests/src/tests/: index.ts
(+14 files in other folders)
